# skypro-homework-

./: .env.simple  main.py  pyproject.toml
src/: decorators.py  generators.py  logging_settings.py  masks.py  processing.py  readingCSVandXLSXfiles.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_readingCSVandXLSXfiles.py  test_reading_csv_and_xlsx_files.py  test_utils.py  test_widget.py  tests_mask_functions.py
